--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #3aafa9;
+  background-color: #f4f4f4;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  height: 100%;
 }
